--- a/studentSuccessUpdate/CMakeLists.txt
+++ b/studentSuccessUpdate/CMakeLists.txt
@@ -35,6 +35,12 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         user.h user.cpp
+
+
+
+
+
+        navigationwindow.ui
     )
 else()
     if(ANDROID)
